--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.11.0
 Django==5.2.9
 django-cors-headers==4.9.0
+django-environ==0.12.0
 djangorestframework==3.16.1
+mysqlclient==2.2.7
 sqlparse==0.5.4
 typing_extensions==4.15.0
