--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,10 @@ django-cors-headers==4.9.0
 django-environ==0.12.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
 jsonparser==1.0
 mysqlclient==2.2.7
+packaging==25.0
 pillow==12.1.0
 PyJWT==2.10.1
 sqlparse==0.5.4
